--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta property="og:description" content="本当に有益なとんかつ情報サイトです。" />
     <meta property="og:url" content="http://ton.katsuma.tv" />
     <meta property="og:title" content="TON.KATSUma.tv" />
-    <link rel="stylesheet" href="./tonkatsu.css">
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/tonkatsu.css" />
     <title>Ton.katsuma.tv</title>
   </head>
 
