--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="TON.KATSUma.tv" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/tonkatsu.css" />
-    <title>Ton.katsuma.tv</title>
+    <title>TON.KATSUma.tv</title>
   </head>
 
   <body>
