--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="http://ton.katsuma.tv" />
     <meta property="og:title" content="TON.KATSUma.tv" />
     <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/tonkatsu.css" />
+    <link rel="stylesheet" href="/tonkatsu.css?201202220242" />
     <title>TON.KATSUma.tv</title>
   </head>
 
@@ -54,7 +54,7 @@
           }(document, 'script', 'facebook-jssdk'));</script>
 
         <div id="threads">
-          <div class="fb-comments" data-href="http://ton.katsuma.tv" data-num-posts="6" data-width="380"></div>
+          <div class="fb-comments" data-href="http://ton.katsuma.tv" data-num-posts="6" data-width="420"></div>
         </div>
 
         <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fton.katsuma.tv&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=80&amp;appId=110236365751632" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
