--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,12 @@
         <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fton.katsuma.tv&amp;send=false&amp;layout=standard&amp;width=450&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=80&amp;appId=110236365751632" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
       </div>
 
+
+      <footer>
+        <p>Copyright &copy; katsuma.tv All Rights Reserved.</p>
+      </footer>
+
+
     </div>
   </body>
 </html>
