--- a/public/index.html
+++ b/public/index.html
@@ -25,14 +25,22 @@
           <section id="tonta" class="tonkatsu">
             <h2>Tonta is best.</h2>
             <p>
-              <a href="http://www.flickr.com/photos/katsuma/516373832/" title="tonkatsu @ tonta by katsuma, on Flickr"><img src="http://farm1.static.flickr.com/237/516373832_6110cdf09a.jpg" width="500" height="375" alt="tonkatsu @ tonta" /></a>
+              <a href="http://r.tabelog.com/tokyo/A1305/A130503/13003984/" title="tonkatsu @ tonta by katsuma, on Flickr"><img src="http://farm1.static.flickr.com/237/516373832_6110cdf09a.jpg" width="500" height="375" alt="tonkatsu @ tonta" /></a>
             </p>
           </section>
+
+          <section id="narikura" class="tonkatsu">
+            <h3>Narikura is so good.</h3>
+            <p>
+              <a href="http://r.tabelog.com/tokyo/A1305/A130503/13114695/" title="narikura @ Takadanobaba"><img src="/images/narikura.jpg" width="360" height="270" alt="narikura @ Takadanobaba" /></a>
+            </p>
+          </section>
+
 
           <section id="tonki" class="tonkatsu">
             <h3>Tonki is good.</h3>
             <p>
-              <a href="http://www.flickr.com/photos/katsuma/6079550/" title="tonki @ meguro by katsuma, on Flickr"><img src="http://farm1.static.flickr.com/3/6079550_1d58a3c185_m.jpg" width="240" height="180" alt="tonki @ meguro" /></a>
+              <a href="http://r.tabelog.com/tokyo/A1316/A131601/13002040/" title="tonki @ meguro by katsuma, on Flickr"><img src="http://farm1.static.flickr.com/3/6079550_1d58a3c185_m.jpg" width="240" height="180" alt="tonki @ meguro" /></a>
             </p>
           </section>
 
